# rickle

./: README.md  build_utils.py  mkdocs.yml  pyproject.toml
docs/: basic_examples.md  changelog.md  contrib.md  extended_usage.md  index.md  installation.md  license.md
docs/api/: index.md  rickle.md  schema.md  tools.md
docs/cli/: conv.md  index.md  serve.md
docs/cli/schema/: check.md  gen.md  index.md
docs/source/: changelog.rst  cli_tools.rst  examples.rst
rickle/: __init__.py  __version__.py  net.py  schema.py  tools.py
rickle/cli/: __init__.py  conv.py  obj.py  schema.py
tests/unittest/: test_base_rickle.py  test_cli.py  test_net.py  test_rickle.py  test_schema_tool.py
